# text-embedding-sdk.rs

./: .gitmodules  Cargo.toml  README.md  build.rs
src/: embed.rs  lib.rs  proto.rs  rerank.rs
