[package]
name = "text-embedding-sdk"
version = "0.1.0"
edition = "2021"

[dependencies]
tonic = "0.11.0"
serde_json = "1.0.113"
prost = "0.12"
prost-types = "0.12"
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1.37"
anyhow = "1.0.75"
async-stream = "0.3.5"

[dev-dependencies]
tokio= { version = "1.0", features = ["full"] }
[build-dependencies]
tonic-build = "0.11.0"
prost-build = "0.12"
